// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtpInput /> should match blurred and disabled snapshot 1`] = `
<div>
  <input
    autocomplete="off"
    class="default disabled"
    data-testid="otp-input"
    disabled=""
    id="otp-input"
    maxlength="1"
    placeholder="-"
    type="tel"
    value=""
  />
</div>
`;

exports[`<OtpInput /> should match snapshot 1`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    data-testid="otp-input"
    id="otp-input"
    maxlength="1"
    placeholder="-"
    type="tel"
    value=""
  />
</div>
`;
